# digital-hospitals

./: .gitattributes  .gitignore  .pylintrc  README.md  dockercompose-dev.yaml  poetry-refresh.sh  util.sh
digital-hospitals/: pyproject.toml
digital-hospitals-docs/: pyproject.toml
digital-hospitals-docs/source/: conf.py  dev_fastapi.md  dev_install.md  dev_sphinx.md  index.rst  modules_asset.md  modules_bim.md  modules_overview.md  modules_resource.md  modules_sim.md  modules_stock.md  todo.md
digital-hospitals.bim/: pyproject.toml
digital-hospitals.bim/digital_hospitals/bim/: app.py  models.py
digital-hospitals.common/: pyproject.toml
digital-hospitals.common/digital_hospitals/common/: __init__.py
digital-hospitals.dev-frontpage/: pyproject.toml
digital-hospitals.dev-frontpage/digital_hospitals/dev_frontpage/: __init__.py  app.py
digital-hospitals.example/: pyproject.toml
digital-hospitals.example/digital_hospitals/example/: app.py
digital-hospitals/test/: test_imports.py
dockerfiles/: bim.dockerfile  dev-frontpage.dockerfile  example.dockerfile  nginx.dockerfile
nginx/: README.md  default.conf
nginx/static/: swagger-dark-ui.css
notebooks/: bim-api.ipynb  bim-mongo.ipynb  bim.ipynb  mongo.ipynb  tempfile.ipynb
