[tool.poetry]
name = "digital-hospitals-docs"
version = "0.1.0"
description = ""
authors = ["Yin-Chi Chan <ycc39@cam.ac.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.0.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinxcontrib-kroki = "^1.3.0"
myst-parser = "^3.0.1"
sphinx-rtd-dark-mode = "^1.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
