[tool.poetry]
name = "digital-hospitals-dev-frontpage"
version = "0.1.0"
description = ""
authors = ["Yin-Chi Chan <ycc39@cam.ac.uk>"]
readme = "README.md"
packages = [{include = "digital_hospitals"}]

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.17.0"
dash-mantine-components = "^0.14.3"
dash-compose = "^2023.3.12"
dash-iconify = "^0.1.2"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
