[tool.poetry]
name = "digital-hospitals-example"
version = "0.1.0"
description = ""
authors = ["Yin-Chi Chan <ycc39@cam.ac.uk>"]
readme = "README.md"
packages = [{include = "digital_hospitals"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.2"
digital-hospitals-common = {path = "../digital-hospitals.common", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
